--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 id="markerB"
             >
                 <a-entity
-                    id="bowser-model"
+                    id="bowser-model1"
                     scale="0.28482725060034164 0.28482725060034164 0.28482725060034164"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset1"
